--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 
 	<link rel="preload" href="/fonts/Lato-Regular.woff2" as="font" type="font/woff2" crossorigin>
 	<link rel="preload" href="/fonts/Lato-Bold.woff2" as="font" type="font/woff2" crossorigin>
+	
+	<link rel="icon" href="favicon.ico">
 
 
 	<link rel="preload" href="css/style.css" as="style">
